@@ -520,9 +520,9 @@ REAR_DEP_DEBIAN6="binutils attr syslinux ethtool lsb-release genisoimage iproute
 REAR_DEP_DEBIAN7="binutils attr syslinux ethtool lsb-release genisoimage iproute iputils-ping parted openssl gawk mingetty sudo curl nfs-common"
 REAR_DEP_DEBIAN8="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc rsync genisoimage isolinux"
 REAR_DEP_DEBIAN9="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools less rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
-REAR_DEP_DEBIAN10="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
-REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk"
-REAR_DEP_DEBIAN12="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk"
+REAR_DEP_DEBIAN10="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk xorriso syslinux-efi"
+REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk xorriso syslinux-efi"
+REAR_DEP_DEBIAN12="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client syslinux gdisk xorriso syslinux-efi"
 
 # UBUNTU Dependencies
 REAR_DEP_UBUNTU12="syslinux ethtool lsb-release genisoimage iproute iputils-ping binutils parted openssl gawk attr mingetty sudo curl nfs-common"
@@ -531,8 +531,8 @@ REAR_DEP_UBUNTU16="binutils attr nfs-common dosfstools parted bc rsync genisoima
 REAR_DEP_UBUNTU17="binutils attr nfs-common"
 REAR_DEP_UBUNTU18="binutils attr nfs-common rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 REAR_DEP_UBUNTU19="binutils attr nfs-common kbd file isc-dhcp-client"
-REAR_DEP_UBUNTU20="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
-REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2 file kbd isc-dhcp-client parted less bc syslinux dosfstools iputils-ping"
+REAR_DEP_UBUNTU20="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc kbd file isc-dhcp-client xorriso syslinux-efi"
+REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2 file kbd isc-dhcp-client parted less bc syslinux dosfstools iputils-ping xorriso syslinux-efi"
 
 # CENTOS/REDHAT Dependencies
 REAR_DEP_REDHAT5_32="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
@@ -589,13 +589,12 @@ REAR_SERVICES_SUSE15="rpcbind nfs"
 ############### ----- SUDO COMMANDS
 #
 ########
-
 SUDO_CMDS_DRLM=( 'mount' 'umount' 'rm' 'mkdir' 'vgs' 'stat' 'cat /etc/rear/drlm.token' )
 SUDO_DRLM_SCRIPTS=( '/var/lib/drlm/scripts/drlm_pre_runbackup_script.sh' '/var/lib/drlm/scripts/drlm_post_runbackup_script.sh' )
+
 ############### ----- SSH PARAMETERS
 #
 ########
-
 SSH_PORT=22
 SSH_OPTS="-tt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no -o LogLevel=ERROR"
 
